georeference endpoint in swagger
